--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-soon
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Selection Screen</title>
+    <!--Bootstrap CSS-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <!--Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!--Actual CSS-->
+    <link rel="stylesheet" href="globalStyles.css">
+</head>
+<body>
+    <div class="cardHolder">
+        <div class="card" id="A">1</div>
+        <div class="card" id="B">2</div>
+        <div class="card" id="C">3</div>
+        <div class="card" id="D">4</div>
+    </div>
+</body>
+</html>
