--- a/index.html
+++ b/index.html
@@ -14,10 +14,19 @@
 </head>
 <body>
     <div class="cardHolder">
-        <div class="card" id="A">1</div>
-        <div class="card" id="B">2</div>
-        <div class="card" id="C">3</div>
-        <div class="card" id="D">4</div>
+        <div class="card" id="A">
+            <h1>Title 1</h1>
+            <div class="cardGradient"></div>
+        </div>
+        <div class="card" id="B">
+            <div class="cardGradient"></div>
+        </div>
+        <div class="card" id="C">
+            <div class="cardGradient"></div>
+        </div>
+        <div class="card" id="D">
+            <div class="cardGradient"></div>
+        </div>
     </div>
 </body>
 </html>
